# infinitier

./: Cargo.toml  README.md
src/core/: Cargo.toml
src/core/src/: constants.rs  datasource.rs  fs.rs  io.rs  lib.rs  test_utils.rs
src/core/src/resource/: a_2da.rs  bif.rs  bmp.rs  common.rs  key.rs  mod.rs  pvr.rs  test_utils.rs  two_da.rs  wed.rs
src/core/src/resource/bam/: bam_v1.rs  bam_v2.rs  bamc.rs  mod.rs
src/core/src/resource/bif/: bif.rs  bif_reader.rs  bifc.rs  bifc_reader.rs  biff.rs  biff_reader.rs  mod.rs
src/core/src/resource/snapshots/: infinitier_core__resource__key__tests__key_file_.__tests__resources__bg.snap  infinitier_core__resource__key__tests__key_file_.__tests__resources__bg2.snap  infinitier_core__resource__key__tests__key_file_.__tests__resources__bg2_ee.snap  infinitier_core__resource__key__tests__key_file_.__tests__resources__bg_ee.snap  infinitier_core__resource__key__tests__key_file_.__tests__resources__iwd.snap  infinitier_core__resource__key__tests__key_file_.__tests__resources__iwd2.snap  infinitier_core__resource__key__tests__key_file_.__tests__resources__iwd_ee.snap  infinitier_core__resource__key__tests__key_file_.__tests__resources__pst.snap  infinitier_core__resource__key__tests__key_file_.__tests__resources__pst_ee.snap  infinitier_core__resource__wed__tests__parse_wed_file.snap
src/core/tests/resources/bg/: Chitin.key
src/core/tests/resources/bg/data/: AREA380X.BIF
src/core/tests/resources/bg2/: CHITIN.KEY
src/core/tests/resources/bg2/data/Data/: AREA070C.bif
src/core/tests/resources/bg2/override/: AbClasRq.2DA  aerie.bcs
src/core/tests/resources/bg2_ee/data/: area500c.bif
src/core/tests/resources/bg_ee/: chitin.key
src/core/tests/resources/iwd2/: CHITIN.KEY
src/core/tests/resources/iwd_ee/: chitin.key
src/core/tests/resources/pst/: CS_0511.bif  chitin.key
src/core/tests/resources/pst_ee/: chitin.key
src/core/tests/resources/resources/BAM_V1/: 1chan03B_compressed.BAM
src/core/tests/resources/resources/BAM_V1/01/: 1chan03B_decompressed.BAM
src/core/tests/resources/resources/BAM_V1/02/: SPHEART_compressed.BAM  SPHEART_decompressed.BAM
src/core/tests/resources/resources/BAM_V2/: 1CHELM03.BAM  MOS1000.PVRZ
src/core/tests/resources/resources/MOS_DXT1/: A004602.PVRZ  A150024.PVR  A150024.PVRZ
src/core/tests/resources/resources/MOS_DXT5/: MOS0000.PVR  MOS0000.PVRZ
src/egui/: Cargo.toml
src/egui/src/: main.rs
(+4 files in other folders)
