[workspace]
members = [
    "src/*"
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
infinitier_core = { path = "src/core" }

encoding_rs = "0.8"
flate2 = "1"
insta = { version = "1", features = ["json", "redactions", "filters"] }
itertools = "0.14"
log = "0.4"
serde = { version = "1", features = ["derive"] }


[profile.dev]
debug = "line-tables-only"

# Set the settings for all dependencies (but not this crate itself or any workspace member).
# This includes build dependencies.
# Level range is from 0 (default for dev) to 3 (default for release)
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2