[package]
name = "infinitier_core"
version.workspace = true
edition.workspace = true

[dependencies]
bitflags = { workspace = true }
encoding_rs =  { workspace = true }
flate2 = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
