[package]
name = "infinitier_core"
version.workspace = true
edition.workspace = true

[dependencies]
bitflags = { workspace = true }
encoding_rs =  { workspace = true }
flate2 = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

bcdec_rs = "0.2.0"
dds = "0.2.0"
texture2ddecoder = "0.1"

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
