[package]
name = "egui"
edition.workspace = true
version.workspace = true

[dependencies]
eframe = "0.33"
# eframe = { version = "0.33.0", default-features = false, features = [
#     "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
#     "wayland",       # To support Linux (and CI)
#     "x11",           # To support older Linux distributions (restores one of the default features)
# ] }
